test/valid-files/int_to_real.in.pcse
DECLARE x: INTEGER
DECLARE y: REAL
x <- 2
y <- x
OUTPUT y
