test/invalid-files/real_to_int.in.pcse
DECLARE x: REAL
DECLARE y: INTEGER
x <- 2.0
y <- x
